--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <div class="heading"><h1></h1></div>
     <section class="home" id="home">
-
+        <div class="bgcover" style="animation: none;"></div>
         <div class="content">
             <span style="color: aqua;">请看我的原创角色们！</span>
             <h3>明狗野人 MingoLia</h3>
