--- a/illustrations.html
+++ b/illustrations.html
@@ -242,10 +242,10 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/illustration/IMG_0333.jpg" alt="">
+                <img src="images/illustration/IMG_0333.JPG" alt="">
                 <div class="info">
                     <p>
-                        <a href="./images/illustration/IMG_0333.jpg" target="_blank" class="view-btn">
+                        <a href="./images/illustration/IMG_0333.JPG" target="_blank" class="view-btn">
                             View
                             <i class="fa fa-external-link-alt"></i>
                         </a>
@@ -304,10 +304,10 @@
 
 
             <div class="box">
-                <img src="images/home1.jpg" alt="">
+                <img src="images/home1.JPG" alt="">
                 <div class="info">
                     <p>
-                        <a href="./images/home1.jpg" target="_blank" class="view-btn">
+                        <a href="./images/home1.JPG" target="_blank" class="view-btn">
                             View
                             <i class="fa fa-external-link-alt"></i>
                         </a>
