--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
         </nav>
         
     </header>
+
     <div class="heading"><h1></h1></div>
+
     <section class="home" id="home">
-        <div class="bgcover" style="animation: none;"></div>
+
         <div class="content">
-            <span style="color: aqua;">请看我的原创角色们！</span>
+            <div class="bgcover" style="animation: none; z-index: -1;"></div>
+            <span style="color: aqua; z-index: 10;">请看我的原创角色们！</span>
             <h3>明狗野人 MingoLia</h3>
-            <a href="#smry" class="btn">更多</a>
-            <a class="prev" onclick="plusSlides(-1)" style="animation: none;">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)" style="animation: none;">&#10095;</a>
+            <a href="#smry" class="btn" style="z-index: 10;">更多</a>
+            <a class="prev" onclick="plusSlides(-1)" style="animation: none; z-index: 10;">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)" style="animation: none; z-index: 10;">&#10095;</a>
         </div>
 
 
