--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
 
 
-</head>/
+</head>
 <body>
     <header>
         <a href="index.html" style="color: aliceblue; display:inline-flex;"> 
@@ -44,11 +44,7 @@
                 <h3>DES无尽夏日 - 数码宝贝大冒险同人企划</h3>
             </div>
 
-            <div class="box-container" style="
-                -moz-column-count:    3;
-                -webkit-column-count: 3;
-                column-count:         3;
-            ">
+            <div class="box-container">
                 <div class="box">
                     <img src="http://img-work2.elfartworld.com/1658182522a7bcyRKTSu.jpeg" alt="">
                     <div class="info">
